Version 16     ???

--Added support for temporary logins to existing accounts with account details
  not saved locally.




Version 15     Live Server Fixes

--Fixed revealed-square leak if opponent posts their revealed square before we
  get a chance to request the pre-reveal game state.  Also fixed bet leaks that
  could happen through similar bad timing (thanks several forum members).




Version 15     2015-February-9

--Fixed crash when mousing over not-yet-loaded game board (was incorrectly
  trying to update score graph based on a null game board) (thanks Benjamin Y).




Version 14     Live Server Fixes

--Fixed DENIED error when game creator quits while waiting for an opponent and
  somebody joins the stale game before it has been flushed (thanks Josh C).

--Fixed so that a player who has been approved to go over the $500 deposit
  limit for one card can also deposit more money using other cards (thanks
  Cayce U).





Version 14     2015-February-6  

--Fixed bug in mousing over uncolored squares that was not properly removing
  that column from the possibility space when computing possible opponent
  scores.

--Improved green score graph behavior when there is only one column left and
  it must be given to your opponent (before, the graph behaved as if your
  opponent didn't know their final column if you hadn't assigned it yet but had
  assigned the final green column, which implies the final red column by
  elimination).




Version 13     2015-February-5

--Added a color blind mode with adjustable color hue shifts (so that color
  blind individuals can tweak their own color settings).

--Fixed to clear last pending flying bet after it is no longer needed (so it
  doesn't show up next round or next game). 

--Changed protocol so that a leaving opponent's remaining chip balance is still
  shown.  Thus, we can compute true house tribute even after opponent leaves.

--Added a musicLoudness setting.
